Update homework releases

--- a/hw1/hw1_part2.ipynb
+++ b/hw1/hw1_part2.ipynb
@@ -88,7 +88,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e1e5e54bbab040180c05b2ed4e645423",
+     "checksum": "18b7e3c5381002c30262abddaef5d7a9",
      "grade": true,
      "grade_id": "sparkcontext_setup",
      "locked": true,
@@ -108,7 +108,6 @@
     "findspark.init()\n",
     "import pyspark\n",
     "from pyspark.sql import SQLContext\n",
-    "from nose.tools import assert_equal, assert_true\n",
     "sc = pyspark.SparkContext(appName=\"hw\")\n",
     "sqlContext = SQLContext(sc)\n",
     "\n",
@@ -384,7 +383,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e6ad59935ec44eb856b280b35e676b72",
+     "checksum": "7e9da79636514fe13fa7420dc1a0fa06",
      "grade": true,
      "grade_id": "test_simpleTokenize",
      "locked": true,
@@ -396,6 +395,8 @@
    },
    "outputs": [],
    "source": [
+    "from nose.tools import assert_equal, assert_true\n",
+    "\n",
     "\"\"\"Check that the function turns all characters into lower-case, and returns the tokens in the string \"\"\"\n",
     "assert_equal(simpleTokenize(quickbrownfox), ['a','quick','brown','fox','jumps','over','the','lazy','dog'])\n",
     "\"\"\"Check that the function removes non-empty tokens in the string \"\"\"\n",
@@ -863,7 +864,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "af70e2de11737fd61a1bd296917a2a33",
+     "checksum": "419a57db7b1b94195b34a33acfaa8a06",
      "grade": false,
      "grade_id": "idfs",
      "locked": false,
@@ -891,7 +892,7 @@
     "    # YOUR CODE HERE\n",
     "    raise NotImplementedError()\n",
     "\n",
-    "idfsSmall = idfs(amazonRecToToken.union(googleRecToToken))\n",
+    "idfsSmall = idfs(corpusRDD)\n",
     "uniqueTokenCount = idfsSmall.count()\n",
     "\n",
     "print('There are %s unique tokens in the small datasets.' % uniqueTokenCount)"
@@ -936,7 +937,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e508942b3cd400810746759f5f4b5937",
+     "checksum": "7af8102c8a447b819752b96c06a60a23",
      "grade": false,
      "grade_id": "smallIDFTokens",
      "locked": false,
@@ -947,7 +948,7 @@
    },
    "outputs": [],
    "source": [
-    "# *answer*: The 10 smallest IDFs are for: (1) software, (2) new, (3) features, (4) use, (5) complete, (6) easy, (7 tie) cd, (7 tie) system, (7 tie) create, (10 tie) windows, (10 tie) 1.\n",
+    "# *answer*: The 10 smallest IDFs are for: (1) software, (2 tie) new, (2 tie) features, (4) use, (5) complete, (6) easy, (7 tie) cd, (7 tie) system, (7 tie) create, (10 tie) windows, (10 tie) 1\n",
     "\n",
     "# These terms not useful for entity resolution because they are generic terms for marketing, prices, and product categories.\n",
     "\n",
@@ -998,7 +999,7 @@
     "### (2e) IDF Histogram\n",
     "Plot a histogram of IDF values.  Be sure to use appropriate scaling and bucketing for the data.\n",
     "\n",
-    "First plot the histogram using `matplotlib`."
+    "First plot the histogram using [matplotlib](https://matplotlib.org/3.1.1/gallery/statistics/hist.html)"
    ]
   },
   {
@@ -2077,7 +2078,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "8abfa8ba7acec69f2911b6c5fd6669cb",
+     "checksum": "7f39944d3d85e651c2641f5690e37ad2",
      "grade": false,
      "grade_id": "common_tokens",
      "locked": false,
@@ -2089,6 +2090,7 @@
    "outputs": [],
    "source": [
     "# TODO: Uncomment the template below and replace <FILL IN> with appropriate code\n",
+    "# (Note that it might take some time to run this cell)\n",
     "# def swap(record):\n",
     "#     \"\"\" Swap (token, (ID, URL)) to ((ID, URL), token)\n",
     "#     Args:\n",
