--- a/hw1/hw1_part1.ipynb
+++ b/hw1/hw1_part1.ipynb
@@ -125,7 +125,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e1e5e54bbab040180c05b2ed4e645423",
+     "checksum": "18b7e3c5381002c30262abddaef5d7a9",
      "grade": true,
      "grade_id": "sparkcontext_setup",
      "locked": true,
@@ -145,7 +145,6 @@
     "findspark.init()\n",
     "import pyspark\n",
     "from pyspark.sql import SQLContext\n",
-    "from nose.tools import assert_equal, assert_true\n",
     "sc = pyspark.SparkContext(appName=\"hw\")\n",
     "sqlContext = SQLContext(sc)\n",
     "\n",
@@ -211,7 +210,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "07bbbc4f2b03668e32f77fb9084b77b7",
+     "checksum": "f5cb478d537514fa0755aef9ead2e758",
      "grade": true,
      "grade_id": "test_makePlural",
      "locked": true,
@@ -222,6 +221,8 @@
    },
    "outputs": [],
    "source": [
+    "from nose.tools import assert_equal, assert_true\n",
+    "\n",
     "# Load in the testing code and check to see if your answer is correct\n",
     "# If incorrect it will report back '1 test failed' for each failed test\n",
     "# Make sure to rerun any cell you change before trying the test again\n",
@@ -605,12 +606,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### (2c) Counting using `reduceByKey` \n",
     "\n",
-    "A better approach is to start from the pair RDD and then use the [reduceByKey()](http://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.reduceByKey) transformation to create a new pair RDD. The `reduceByKey()` transformation gathers together pairs that have the same key and applies the function provided to two values at a time, iteratively reducing all of the values to a single value. `reduceByKey()` operates by applying the function first within each partition on a per-key basis and then across the partitions, allowing it to scale efficiently to large datasets."
+    "A better approach is to start from the pair RDD and then use the [reduceByKey()](http://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.reduceByKey) transformation to create a new pair RDD. The `reduceByKey()` transformation gathers together pairs that have the same key and applies the function provided to two values at a time, iteratively reducing all of the values to a single value. `reduceByKey()` operates by applying the function first within each partition on a per-key basis and then across the partitions, allowing it to scale efficiently to large datasets.\n",
+    "\n",
+    "Note that if the operation we are trying to do is not commutative and associative, it is not always possible to use `reduceByKey`, and we are forced to use `groupByKey`. For example, we can’t use ` reduceByKey ` to compute the median of a key. Count, however, is both commutative and associative, so we can use it."
    ]
   },
   {
@@ -1184,7 +1188,7 @@
    "source": [
     "### (4f) Count the words\n",
     "\n",
-    "We now have an RDD that is only words.  Next, let's apply the `wordCount()` function to produce a list of word counts. We can view the top 15 words by using the `takeOrdered()` action; however, since the elements of the RDD are pairs, we need a custom sort function that sorts using the value part of the pair.\n",
+    "We now have an RDD that is only words.  Next, let's apply the `wordCount()` function to produce a list of word counts. We can view the top 15 most frequent words by using the `takeOrdered()` action; however, since the elements of the RDD are pairs, we need a custom sort function that sorts using the value part of the pair.\n",
     "\n",
     "You'll notice that many of the words are common English words. These are called stopwords. In a later lab, we will see how to eliminate them from the results.\n",
     "Use the `wordCount()` function and `takeOrdered()` to obtain the fifteen most common words and their counts."
