--- a/hw2_part2.ipynb
+++ b/hw2_part2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CMU 10-605/10-805 auto-graded notebook\n",
+    "# CMU 10-405/10-605 auto-graded notebook\n",
     "\n",
     "Before you turn this assignment in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel → Restart) and then **run all cells** (in the menubar, select Cell → Run All).\n",
     "\n",
@@ -19,10 +19,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#CMU 10605/10805 Machine Learning with Large Datasets"
+    "#CMU 10405/10605 Machine Learning with Large Datasets"
    ]
   },
   {
@@ -328,7 +330,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a8af46da88bcb7c09dc67fef719710a3",
+     "checksum": "619f81ec00c87f51df537162c94e9e54",
      "grade": false,
      "grade_id": "answer_covMatrix1b",
      "locked": false,
@@ -344,6 +346,8 @@
     "# # 1. Compute the outer product of each data point\n",
     "# # 2. Add together these outer products\n",
     "# # 3. Divide by the number of data points\n",
+    "\n",
+    "# correlated_cov = \n",
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
@@ -709,11 +713,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a791a224bc82d797e63ae091e28b7095",
+     "checksum": "b17c487770f2fa9b75db38034a426d76",
      "grade": true,
      "grade_id": "test_PCAfunction2a",
      "locked": true,
-     "points": 10,
+     "points": 3,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -791,11 +795,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "55eb47b35fc9b87d364220e3fa58d3d7",
+     "checksum": "74d0e39381f7f8160b1bccd803449054",
      "grade": true,
      "grade_id": "test_PCADataRandom2b",
      "locked": true,
-     "points": 3,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1008,11 +1012,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "b500f897fcd2aff8298e7ec85e1137f7",
+     "checksum": "a26131a02ae5984bdb1537244c243ea7",
      "grade": true,
      "grade_id": "test_PCAThreeDimension2c",
      "locked": true,
-     "points": 4,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1128,11 +1132,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "f392e5c9ae814514b4d338c5a914e773",
+     "checksum": "623c85dd43aa5ff2d855cf0152340d91",
      "grade": true,
      "grade_id": "test_varianceExplained2d",
      "locked": true,
-     "points": 5,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1269,11 +1273,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "bf4ed8142f312707a664f657fcc1e0d5",
+     "checksum": "606d737c3dc5613c5f9eec23d48dba3f",
      "grade": true,
      "grade_id": "test_parseData3b",
      "locked": true,
-     "points": 10,
+     "points": 2,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1339,11 +1343,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "c6c5b3f8049ece3a99c3c763810f1533",
+     "checksum": "01e87aab41f955f75da7cb14313369d8",
      "grade": true,
      "grade_id": "test_MinMax3c",
      "locked": true,
-     "points": 2,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1440,11 +1444,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "bf9d7628dba52dfe607d0eff250b2e2b",
+     "checksum": "85a9acaca13ddc73d9844edd342d134a",
      "grade": true,
      "grade_id": "test_rescale3d",
      "locked": true,
-     "points": 3,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1533,11 +1537,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "f69a6f3312dc2c4faff95974ca3545ad",
+     "checksum": "8790d2c9dc6c84b091daf89fd5586a73",
      "grade": true,
      "grade_id": "test_PCAscaled3e",
      "locked": true,
-     "points": 4,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1597,7 +1601,7 @@
     "ax.grid(False)\n",
     "ax.set_title('Second Principal Component', color='#888888')\n",
     "image = plt.imshow(image_two_scaled, interpolation='nearest', aspect='auto', cmap=cm.gray)\n",
-    "display(fig)"
+    "display(fig)\n"
    ]
   },
   {
@@ -1796,11 +1800,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e9c20b2d3e960338c20d72e9de905b33",
+     "checksum": "bfaefe7666b99f1ee2f77a4f05bb775b",
      "grade": true,
      "grade_id": "test_aggregationArray4a",
      "locked": true,
-     "points": 8,
+     "points": 3,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1887,11 +1891,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "134b35d6bfa5396889beafa1c14a8403",
+     "checksum": "3a28c6d348b517dfdd6be26eb0ebc718",
      "grade": true,
      "grade_id": "test_tileAggregation4b",
      "locked": true,
-     "points": 4,
+     "points": 3,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1975,11 +1979,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "687f2d563c3d7ed51bc8666eb9fb0258",
+     "checksum": "dea919c64531806eaa5691da674b46a7",
      "grade": true,
      "grade_id": "test_kronAggregation4c",
      "locked": true,
-     "points": 4,
+     "points": 3,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -2048,11 +2052,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "54731f17f417f23c3b0450a88d38d34e",
+     "checksum": "bfff9dfc0509065d6a2e9a951a8ac7ac",
      "grade": true,
      "grade_id": "test_timeAggregation4d",
      "locked": true,
-     "points": 6,
+     "points": 2,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -2121,11 +2125,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "743000470c210807f464c423eb1a8b9d",
+     "checksum": "bc32da6c7c84bc61ace70661be8904af",
      "grade": true,
      "grade_id": "test_compactRep4e",
      "locked": true,
-     "points": 4,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -2221,11 +2225,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "4fb20fc7256e7df50ad0fd71803b1d81",
+     "checksum": "409e318e6f53505b8267fb21eef9b7cc",
      "grade": true,
      "grade_id": "test_directionAggregation4f",
      "locked": true,
-     "points": 6,
+     "points": 2,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -2293,11 +2297,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "4a06564551c93ddbaed12b66c58d578e",
+     "checksum": "1a97706959c379e47dfadd3a6469e5d5",
      "grade": true,
      "grade_id": "test_compactDirection4g",
      "locked": true,
-     "points": 4,
+     "points": 2,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -2368,10 +2372,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  },
-  "name": "CTR_DF_answers",
-  "notebookId": 743615222353704
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
