--- a/hw2_part1.ipynb
+++ b/hw2_part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CMU 10-605/10-805 auto-graded notebook\n",
+    "# CMU 10-405/10-605 auto-graded notebook\n",
     "\n",
     "Before you turn this assignment in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel → Restart) and then **run all cells** (in the menubar, select Cell → Run All).\n",
     "\n",
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#CMU 10605/10805 Machine Learning with Large Datasets\n",
+    "#CMU 10405/10605 Machine Learning with Large Datasets\n",
     "\n",
     "## Homework 2 - Part 1:  Linear Regression"
    ]
@@ -62,9 +62,9 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "50c5e9b3db94ec533690bf66a486406a",
+     "checksum": "ffcaa8876c47a435b66ee4040f051180",
      "grade": true,
-     "grade_id": "test_collaborators",
+     "grade_id": "testCollaborators",
      "locked": true,
      "points": 0,
      "schema_version": 3,
@@ -899,7 +899,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e8d8b9ae0c242088040e2e5eff2009b0",
+     "checksum": "391a8babe3953dcdc2a7a03a675a2cad",
      "grade": false,
      "grade_id": "RMSE",
      "locked": false,
@@ -912,7 +912,8 @@
    "source": [
     "# TODO: Uncomment the following lines and replace <FILL IN> with appropriate code\n",
     "# preds_and_labels_train = parsed_train_data_df.<FILL IN>\n",
-    "# hint: Use createDataFrame to create a DataFrame with the column names \n",
+    "# Next, for 'preds_and_labels_train_df', use the function \n",
+    "# createDataFrame to create a DataFrame with the column names \n",
     "# \"prediction\" and \"label\" from RDD 'preds_and_labels_train'.\n",
     "# preds_and_labels_train_df = <FILL IN>\n",
     "# rmse_train_base = <FILL IN>\n",
@@ -1233,7 +1234,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "6659e1b97c64f1122517b54848339358",
+     "checksum": "75c44989c2b80bf7cfaeb1a5bd9efeac",
      "grade": false,
      "grade_id": "gradientDescent",
      "locked": false,
@@ -1270,17 +1271,25 @@
     "    alpha = 1.0\n",
     "    # You will compute and store the training error after each iteration\n",
     "    error_train = np.zeros(num_iters)\n",
+    "    #     for i in range(num_iters):\n",
     "#   Do the gradient descent for num_iters iterations and for each iteration, follow the steps:\n",
-    "#    [1] Use get_labeled_prediction with trainData to obtain an RDD of (label, prediction)\n",
+    "#    [1] Use get_labeled_prediction from (3b) with trainData to obtain an RDD of (label, prediction)\n",
     "#        tuples. Then create a Dataframe with 'predictions' and 'label' from preds_and_labels_train.\n",
     "#        **Hint** Similar to 2c.\n",
     "#        Note that the weights all equal 0 for the first iteration, so the predictions will\n",
     "#        have large errors to start.\n",
+    "#         preds_and_labels_train = <FILL IN>\n",
+    "#         preds_and_labels_train_df = <FILL IN>\n",
     "#    [2] Update i_th train error by using calc_RMSE for the current(i_th) iteration\n",
+    "#         error_train[i] = <FILL IN>\n",
     "#    [3] Calculate the `gradient`.  Make use of the `gradient_summand` function you wrote in (3a).\n",
     "#       Note that `gradient` should be a `DenseVector` of length `d`.\n",
-    "#    [4] Decay the learning rate using alpha_i = alpha / (n * np.sqrt(i+1))\n",
+    "#         gradient = <FILL IN>\n",
+    "#    [4] Decay the learning rate using (uncomment the below line):\n",
+    "#         alpha_i = alpha / (n * np.sqrt(i+1))\n",
     "#    [5] Update the weights using alpha_i\n",
+    "#         w -= <FILL IN>\n",
+    "#     return w, error_train\n",
     "  \n",
     "    # YOUR CODE HERE\n",
     "    raise NotImplementedError()\n",
@@ -1346,9 +1355,9 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "99dd0fb2ad706056dcb2080a0cfeeaff",
+     "checksum": "c4a94626f49cfc76961f97d638983d6a",
      "grade": false,
-     "grade_id": "trainingModel",
+     "grade_id": "trainModel",
      "locked": false,
      "schema_version": 3,
      "solution": true,
@@ -1358,8 +1367,8 @@
    "outputs": [],
    "source": [
     "# TODO: Uncomment the following lines and replace <FILL IN> with appropriate code\n",
-    "# num_iters = 50\n",
-    "# weights_LR0, error_train_LR0 = linreg_gradient_descent(<FILL IN>)\n",
+    "# num_iters = 30\n",
+    "# weights_LR, error_train_LR = linreg_gradient_descent(<FILL IN>)\n",
     "\n",
     "# preds_and_labels = (parsed_val_data_df\n",
     "#                       .<FILL IN>)\n",
@@ -1381,7 +1390,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "0f8b8b405072b571f8e520c38a985cf8",
+     "checksum": "5904e574463d6f7a898002e76f67c35b",
      "grade": true,
      "grade_id": "test_trainingModel",
      "locked": true,
@@ -1394,10 +1403,9 @@
    "outputs": [],
    "source": [
     "# TEST Train the model (3d)\n",
-    "expected_output =[22.37369015, 20.61199637, -0.38237943,  8.13420067,  5.75874955,\n",
-    "       -4.43935733, 15.52273264,  3.96785678,  9.91615892,  5.90397265,\n",
-    "       10.89251975,  3.85231056]\n",
-    "assert_true(np.allclose(weights_LR0, expected_output), 'incorrect value for weights_LR0')\n"
+    "expected_output =[20.38822921, 18.37081975,  1.65771419,  8.07448229, 5.55803544, -1.81674641,\n",
+    " 13.80673629,  4.92861749, 10.06643157,  6.57597723, 10.58621883, 4.92736118]\n",
+    "assert_true(np.allclose(weights_LR, expected_output), 'incorrect value for weights_LR')\n"
    ]
   },
   {
@@ -1416,11 +1424,11 @@
    "outputs": [],
    "source": [
     "norm = Normalize()\n",
-    "clrs = cmap(np.asarray(norm(np.log(error_train_LR0))))[:,0:3]\n",
+    "clrs = cmap(np.asarray(norm(np.log(error_train_LR))))[:,0:3]\n",
     "\n",
     "fig, ax = prepare_plot(np.arange(0, 60, 10), np.arange(2, 6, 1))\n",
     "ax.set_ylim(2, 6)\n",
-    "plt.scatter(range(0, num_iters), np.log(error_train_LR0), s=14**2, c=clrs, edgecolors='#888888', alpha=0.75)\n",
+    "plt.scatter(range(0, num_iters), np.log(error_train_LR), s=14**2, c=clrs, edgecolors='#888888', alpha=0.75)\n",
     "ax.set_xlabel('Iteration'), ax.set_ylabel(r'$\\log_e(errorTrainLR0)$')\n",
     "display(fig)"
    ]
@@ -1432,11 +1440,11 @@
    "outputs": [],
    "source": [
     "norm = Normalize()\n",
-    "clrs = cmap(np.asarray(norm(error_train_LR0[6:])))[:,0:3]\n",
+    "clrs = cmap(np.asarray(norm(error_train_LR[6:])))[:,0:3]\n",
     "\n",
     "fig, ax = prepare_plot(np.arange(0, 60, 10), np.arange(17, 22, 1))\n",
     "ax.set_ylim(17.8, 21.2)\n",
-    "plt.scatter(range(0, num_iters-6), error_train_LR0[6:], s=14**2, c=clrs, edgecolors='#888888', alpha=0.75)\n",
+    "plt.scatter(range(0, num_iters-6), error_train_LR[6:], s=14**2, c=clrs, edgecolors='#888888', alpha=0.75)\n",
     "ax.set_xticklabels(map(str, range(6, 66, 10)))\n",
     "ax.set_xlabel('Iteration'), ax.set_ylabel(r'Training Error')\n",
     "display(fig)"
@@ -2110,6 +2118,13 @@
     "assert_true(np.allclose(rmse_test_interact, 16.09733809961526),\n",
     "                'incorrect value for rmse_test_interact')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2129,10 +2144,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  },
-  "name": "hw2 draft 2.0",
-  "notebookId": 1001063534286280
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
