update code hint

--- a/hw2_part1.ipynb
+++ b/hw2_part1.ipynb
@@ -1987,7 +1987,8 @@
     " > Note:\n",
     " > * Remember that we should build our model from the training data and evaluate it on the validation data.\n",
     " > * You should re-run your hyperparameter search after changing features, as using the best hyperparameters from your prior model will not necessary lead to the best model.\n",
-    " > * For this exercise, we have already preset the hyperparameters to reasonable values."
+    " > * For this exercise, we have already preset the hyperparameters to reasonable values.\n",
+    " > * Using L2 regularization and intercept for model_interact"
    ]
   },
   {
@@ -2016,7 +2017,7 @@
     "\n",
     "\n",
     "# model_interact = LinearRegressionWithSGD.train(<FILL IN>)\n",
-    "# labels_and_preds_interact = parsed_val_data_df.rdd.map(lambda lp: (lp.label, <FILL IN>))\n",
+    "# labels_and_preds_interact = val_data_interact_df.rdd.map(lambda lp: (lp.label, <FILL IN>))\n",
     "# labels_and_preds_interact_df = <FILL_IN>\n",
     "# rmse_val_interact = calc_RMSE(<FILL_IN>)\n",
     "\n",
